# test-task

./: .gitignore  Dockerfile  Makefile  README.md  config.yaml.example  docker-compose.yml  pyproject.toml
balance/: models.py  serializers.py  urls.py  views.py
balance/migrations/: 0001_initial.py  0002_rename_wallet_id_transaction_wallet.py  0003_alter_transaction_txid.py
testtask/: settings.py  urls.py
